--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "redux-logger": "^3.0.6",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
